fix: improving responsiveness on whatwedo, styling scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,24 @@ section {
         height: 16px;
         border-radius: 50%; }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px; }
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #d2d2d2;
+  border-radius: 10px; }
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3f71d4;
+  border-radius: 10px; }
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #5345bd; }
+
 .whatwedo {
   display: flex;
   flex-direction: column;
@@ -450,43 +468,39 @@ section {
       font-weight: 500;
       line-height: 32px;
       text-align: center; }
-  .whatwedo-roadmap-row {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    gap: 12px; }
-    @media screen and (min-width: 1024px) {
-      .whatwedo-roadmap-row {
-        flex-direction: row;
-        align-items: normal; } }
-    .whatwedo-roadmap-row-item {
-      max-width: 284px;
-      padding: 0;
+  .whatwedo-roadmap {
+    max-width: 100%; }
+    .whatwedo-roadmap-row {
+      position: relative;
       display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 24px; }
-      @media screen and (min-width: 768px) {
-        .whatwedo-roadmap-row-item {
-          padding: 32px 24px; } }
-      .whatwedo-roadmap-row-item-image {
-        width: 55px; }
-      .whatwedo-roadmap-row-item-box-title {
-        color: #3f71d4;
-        font-family: "Circular Std";
-        font-size: 20px;
-        font-weight: 700;
-        line-height: 25.3px;
-        text-align: center; }
-      .whatwedo-roadmap-row-item + img {
-        align-self: center;
-        rotate: 90deg; }
-        @media screen and (min-width: 1024px) {
-          .whatwedo-roadmap-row-item + img {
-            rotate: 0deg; } }
+      flex-direction: row;
+      align-items: start;
+      justify-content: left;
+      gap: 12px;
+      overflow: auto; }
+      .whatwedo-roadmap-row-item {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 24px; }
+        @media screen and (min-width: 768px) {
+          .whatwedo-roadmap-row-item {
+            padding: 32px 24px; } }
+        .whatwedo-roadmap-row-item-image {
+          width: 55px; }
+        .whatwedo-roadmap-row-item-box {
+          width: 230px; }
+          .whatwedo-roadmap-row-item-box-title {
+            color: #3f71d4;
+            font-family: "Circular Std";
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 25.3px;
+            text-align: center; }
+        .whatwedo-roadmap-row-item + img {
+          align-self: center; }
 
 .faq {
   background-color: #f5f5f5;
